--- a/TP1/presentacion.ipynb
+++ b/TP1/presentacion.ipynb
@@ -18,19 +18,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import os"
+    "import os\n",
+    "import math\n",
+    "import random"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,9 +124,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([740676888, 827117187, 567649556, 103341042, 184596805, 766975995,\n",
+       "       708724615, 885005613, 976446494, 484015438], dtype=int64)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def poblacionInicial():\n",
     "  rng = np.random.default_rng() # Random Number Generator\n",
@@ -145,9 +159,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['111001000010110110000001000111',\n",
+       " '000111011010110110110100000001',\n",
+       " '111001111101010100111100110001',\n",
+       " '101110011010100100011100111011',\n",
+       " '111011111001011101011110110000',\n",
+       " '100111111010010001011010010001',\n",
+       " '110111110011010110100001010011',\n",
+       " '101100111001011101001101001001',\n",
+       " '101011101010010000001010001101',\n",
+       " '100110111111001011111101000011']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "poblacion_binarios = convertirPoblacion(poblacionInicial(), True)\n",
     "#poblacion_binarios"
@@ -163,9 +197,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Decimales</th>\n",
+       "      <th>Binarios</th>\n",
+       "      <th>FuncionObjetivo</th>\n",
+       "      <th>Fitness</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>957046855</td>\n",
+       "      <td>111001000010110110000001000111</td>\n",
+       "      <td>0.7944501692</td>\n",
+       "      <td>0.1442458753</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>124480769</td>\n",
+       "      <td>000111011010110110110100000001</td>\n",
+       "      <td>0.0134401707</td>\n",
+       "      <td>0.0024402905</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>972377905</td>\n",
+       "      <td>111001111101010100111100110001</td>\n",
+       "      <td>0.8201068226</td>\n",
+       "      <td>0.1489042750</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>778716987</td>\n",
+       "      <td>101110011010100100011100111011</td>\n",
+       "      <td>0.5259682854</td>\n",
+       "      <td>0.0954984449</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1004918704</td>\n",
+       "      <td>111011111001011101011110110000</td>\n",
+       "      <td>0.8759153156</td>\n",
+       "      <td>0.1590372516</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>669587089</td>\n",
+       "      <td>100111111010010001011010010001</td>\n",
+       "      <td>0.3888789209</td>\n",
+       "      <td>0.0706075504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>936208467</td>\n",
+       "      <td>110111110011010110100001010011</td>\n",
+       "      <td>0.7602306764</td>\n",
+       "      <td>0.1380327472</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>753259337</td>\n",
+       "      <td>101100111001011101001101001001</td>\n",
+       "      <td>0.4921407291</td>\n",
+       "      <td>0.0893564795</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>732496525</td>\n",
+       "      <td>101011101010010000001010001101</td>\n",
+       "      <td>0.4653839468</td>\n",
+       "      <td>0.0844983328</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>654098243</td>\n",
+       "      <td>100110111111001011111101000011</td>\n",
+       "      <td>0.3710959598</td>\n",
+       "      <td>0.0673787528</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Decimales                        Binarios  FuncionObjetivo      Fitness\n",
+       "0   957046855  111001000010110110000001000111     0.7944501692 0.1442458753\n",
+       "1   124480769  000111011010110110110100000001     0.0134401707 0.0024402905\n",
+       "2   972377905  111001111101010100111100110001     0.8201068226 0.1489042750\n",
+       "3   778716987  101110011010100100011100111011     0.5259682854 0.0954984449\n",
+       "4  1004918704  111011111001011101011110110000     0.8759153156 0.1590372516\n",
+       "5   669587089  100111111010010001011010010001     0.3888789209 0.0706075504\n",
+       "6   936208467  110111110011010110100001010011     0.7602306764 0.1380327472\n",
+       "7   753259337  101100111001011101001101001001     0.4921407291 0.0893564795\n",
+       "8   732496525  101011101010010000001010001101     0.4653839468 0.0844983328\n",
+       "9   654098243  100110111111001011111101000011     0.3710959598 0.0673787528"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def generarDataFrame(pob_bin):\n",
     "    pob_dec = convertirPoblacion(pob_bin, False)\n",
@@ -188,9 +343,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Suma</th>\n",
+       "      <th>Promedio</th>\n",
+       "      <th>Máximo</th>\n",
+       "      <th>Mínimo</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Función objetivo</th>\n",
+       "      <td>5.5076109964</td>\n",
+       "      <td>0.5507610996</td>\n",
+       "      <td>0.8759153156</td>\n",
+       "      <td>0.0134401707</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Fitness</th>\n",
+       "      <td>1.0000000000</td>\n",
+       "      <td>0.1000000000</td>\n",
+       "      <td>0.1590372516</td>\n",
+       "      <td>0.0024402905</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Suma     Promedio       Máximo       Mínimo\n",
+       "Función objetivo 5.5076109964 0.5507610996 0.8759153156 0.0134401707\n",
+       "Fitness          1.0000000000 0.1000000000 0.1590372516 0.0024402905"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def generarEstadisticas(dataFrame):\n",
     "    indice_cromosoma_max = dataFrame[dataFrame['FuncionObjetivo']==dataFrame['FuncionObjetivo'].max()].index.values[0]\n",
@@ -202,7 +414,7 @@
     "    dataFrame_stats = pd.DataFrame(stats, index = ['Función objetivo', 'Fitness'])\n",
     "    return dataFrame_stats, stats, cromosoma_max\n",
     "marcoDeDatos_stats, stats, cromosoma_max = generarEstadisticas(data_frame)\n",
-    "#marcoDeDatos_stats"
+    "marcoDeDatos_stats"
    ]
   },
   {
@@ -215,17 +427,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['111001111101010100111100110001',\n",
+       " '111001000010110110000001000111',\n",
+       " '111001111101010100111100110001',\n",
+       " '111011111001011101011110110000',\n",
+       " '110111110011010110100001010011']"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def ruleta(pob_bin, cantidad_poblacion):\n",
     "    # Asigna probabilidad basada en el fitness\n",
     "    cromosomas = np.array(pob_bin)\n",
-    "    probabilidades = np.array(funcionFitness(pob_bin))\n",
+    "    fitness = np.array(funcionFitness(pob_bin))\n",
     "    np.random.seed()\n",
-    "    binarios_ruleta = np.random.choice(cromosomas, size=int(cantidad_poblacion), p=probabilidades)\n",
-    "    binarios_ruleta = binarios_ruleta.tolist()\n",
+    "    binarios_ruleta = []\n",
+    "    # LLENAR RULETA\n",
+    "    arreglo_ruleta = []\n",
+    "    for i in range(0,10):\n",
+    "        posiciones_en_ruleta = fitness[i]*1000 #Habra como mínimo 1000 elementos en la ruleta. Esto es para minimizar el error.\n",
+    "        for j in range(0,math.ceil(posiciones_en_ruleta)): #math.ceil siempre devolvera un numero mayor a cero en este caso. siempre habrá almenos un elemento.\n",
+    "            arreglo_ruleta.append(cromosomas[i])\n",
+    "    for k in range(0,cantidad_poblacion):\n",
+    "        posicion_ruleta_random = random.randint(0,len(arreglo_ruleta))\n",
+    "        binarios_ruleta.append(arreglo_ruleta[posicion_ruleta_random])\n",
     "    return binarios_ruleta\n",
     "binarios_ruleta = ruleta(poblacion_binarios, 10)\n",
     "#binarios_ruleta"
@@ -241,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
