--- a/TP2/Golosa.ipynb
+++ b/TP2/Golosa.ipynb
@@ -55,39 +55,25 @@
     "        self.peso_actual = 0 \n",
     "        self.objetos_guardados = []\n",
     "\n",
-    "\n",
-    "    def agregarObjetoPorVolumen(self,objeto):\n",
-    "        \"\"\"\n",
-    "        Agrega un objeto a la mochila.\n",
-    "        \"\"\"\n",
+    "    def agregarObjetoPorVolumen(self,objeto):#Agrega un objeto a la mochila.\n",
     "        global peso_maximo\n",
     "        if volumen_maximo >= self.volumen_actual + objeto.volumen: \n",
     "            self.volumen_actual += objeto.volumen\n",
     "            self.objetos_guardados.append(objeto)\n",
     "\n",
-    "    def agregarObjetoPorPeso(self,objeto):\n",
-    "        \"\"\"\n",
-    "        Agrega un objeto a la mochila.\n",
-    "        \"\"\"\n",
+    "    def agregarObjetoPorPeso(self,objeto):#Agrega un objeto a la mochila.\n",
     "        global peso_maximo\n",
     "        if peso_maximo >= self.peso_actual + objeto.peso: \n",
     "            self.peso_actual += objeto.peso\n",
     "            self.objetos_guardados.append(objeto)\n",
     "\n",
-    "\n",
-    "    def calcular_precio_obtenido(self):\n",
-    "        \"\"\"\n",
-    "        Muestra el precio total de los objetos guardados\n",
-    "        \"\"\"\n",
+    "    def calcular_precio_obtenido(self):#Calcula el precio total de los objetos guardados\n",
     "        precio = 0\n",
     "        for objeto in self.objetos_guardados:\n",
     "            precio += objeto.precio\n",
     "        return precio\n",
-    "\n",
-    "    def mostrar_objetos(self):\n",
-    "        \"\"\"\n",
-    "        Muestra los objetos guardados\n",
-    "        \"\"\"\n",
+    "    \n",
+    "    def mostrar_objetos(self):#Muestra los objetos guardados\n",
     "        filas = []\n",
     "        for objeto in self.objetos_guardados:\n",
     "            filas.append([objeto.precio,objeto.volumen,objeto.peso,objeto.valor_calculado])\n",
@@ -245,17 +231,17 @@
    "source": [
     "mochila = Mochila()\n",
     "elementos = []\n",
-    "for objeto in objetos:\n",
+    "for objeto in objetos:#Crea los objetos\n",
     "    volumen,precio = objeto\n",
     "    nuevo_elemento = Objeto(volumen=volumen,precio=precio)\n",
     "    elementos.append(nuevo_elemento)\n",
-    "\n",
+    "#Ordena objetos\n",
     "elementos.sort(key=lambda x: x.valor_calculado, reverse=True)\n",
     "precio = [] \n",
-    "\n",
+    "#Agrega los objetos a la mochila\n",
     "for objeto in elementos:\n",
     "    mochila.agregarObjetoPorVolumen(objeto)\n",
-    "    \n",
+    "#Muestra los resultados\n",
     "print(\"Volumen ocupado por los objetos: %s\" % mochila.volumen_actual)\n",
     "print(\"Precio obtenido: %s\" % mochila.calcular_precio_obtenido())\n",
     "mochila.mostrar_objetos() "
@@ -346,18 +332,17 @@
    "source": [
     "Mochila_3 = Mochila()\n",
     "elementos_3 = []\n",
-    "for objeto in objetos_por_peso:\n",
+    "for objeto in objetos_por_peso:#Crea los objetos\n",
     "    peso,precio = objeto\n",
     "    nuevo_elemento = Objeto(peso=peso,precio=precio)\n",
     "    elementos_3.append(nuevo_elemento)\n",
-    "\n",
+    "#Ordena los objetos\n",
     "elementos_3.sort(key=lambda x: x.valor_calculado, reverse=True)\n",
     "for objeto in elementos_3:\n",
     "    Mochila_3.agregarObjetoPorPeso(objeto)\n",
-    "\n",
+    "#Muestra los resultados\n",
     "print(\"Peso ocupado por los objetos: %s\" % Mochila_3.peso_actual)\n",
     "print(\"Precio obtenido: %s\" % Mochila_3.calcular_precio_obtenido())\n",
-    "# print(\"Objetos guardados: %s\" % Mochila_3.objetos_guardados)\n",
     "Mochila_3.mostrar_objetos()\n"
    ]
   }
@@ -378,7 +363,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
