Modificando el encabezado de las tablas

--- a/TP2/exa.ipynb
+++ b/TP2/exa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,17 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generar_tabla(filas):\n",
-    "    return pd.DataFrame(filas,columns=[\"Volumen\",\"precio\"])"
+    "def generar_tabla(filas,columnas):\n",
+    "    return pd.DataFrame(filas,columns=columnas)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
        "7      353      28"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,9 +165,9 @@
     "    [353, 28]\n",
     "]\n",
     "dinero_en_mochila, combinacion_en_mochila = busqueda_exhautiva(VOL_MAX, objetos)\n",
-    "# print(\"Dinero total en la mochila:\", dinero_en_mochila)\n",
+    "print(\"Dinero total en la mochila:\", dinero_en_mochila)\n",
     "# print(\"Combinación de objetos en la mochila:\", combinacion_en_mochila)\n",
-    "generar_tabla(combinacion_en_mochila)"
+    "generar_tabla(combinacion_en_mochila,[\"Volumen\",\"precio\"])"
    ]
   },
   {
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Volumen</th>\n",
+       "      <th>Peso</th>\n",
        "      <th>precio</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -228,12 +228,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   Volumen  precio\n",
-       "0     1800      72\n",
-       "1     1200      60"
+       "   Peso  precio\n",
+       "0  1800      72\n",
+       "1  1200      60"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,9 +247,9 @@
     "    [1200, 60],\n",
     "]\n",
     "dinero_en_mochila, combinacion_en_mochila = busqueda_exhautiva(PESO_MAX, objetos_por_peso)\n",
-    "# print(\"Dinero total en la mochila:\", dinero_en_mochila)\n",
+    "print(\"Dinero total en la mochila:\", dinero_en_mochila)\n",
     "# print(\"Combinación de objetos en la mochila:\", combinacion_en_mochila)\n",
-    "generar_tabla(combinacion_en_mochila)"
+    "generar_tabla(combinacion_en_mochila,[\"Peso\",\"precio\"])"
    ]
   }
  ],
