--- a/TP3/tp3-a.ipynb
+++ b/TP3/tp3-a.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -682,9 +682,9 @@
        "</div>"
       ],
       "text/plain": [
-       "                          Cdad. de Bs. As.  Córdoba  Corrientes  Formosa  \\\n",
+       "                          Cdad. de Bs. As.  Córdoba  Corrientes  Formosa   \n",
        "Distancias en kilómetros                                                   \n",
-       "Cdad. de Bs. As.                       NaN    646.0       792.0    933.0   \n",
+       "Cdad. de Bs. As.                       NaN    646.0       792.0    933.0  \\\n",
        "Córdoba                              646.0      NaN       677.0    824.0   \n",
        "Corrientes                           792.0    677.0         NaN    157.0   \n",
        "Formosa                              933.0    824.0       157.0      NaN   \n",
@@ -709,9 +709,9 @@
        "Ushuaia                             2373.0   2618.0      3131.0   3284.0   \n",
        "Viedma                               799.0   1047.0      1527.0   1681.0   \n",
        "\n",
-       "                          La Plata  La Rioja  Mendoza  Neuquén  Paraná  \\\n",
+       "                          La Plata  La Rioja  Mendoza  Neuquén  Paraná   \n",
        "Distancias en kilómetros                                                 \n",
-       "Cdad. de Bs. As.              53.0     986.0    985.0    989.0   375.0   \n",
+       "Cdad. de Bs. As.              53.0     986.0    985.0    989.0   375.0  \\\n",
        "Córdoba                      698.0     340.0    466.0    907.0   348.0   \n",
        "Corrientes                   830.0     814.0   1131.0   1534.0   500.0   \n",
        "Formosa                      968.0     927.0   1269.0   1690.0   656.0   \n",
@@ -736,9 +736,9 @@
        "Ushuaia                     2350.0    2821.0   2435.0   1762.0  2635.0   \n",
        "Viedma                       789.0    1311.0   1019.0    479.0  1030.0   \n",
        "\n",
-       "                          Posadas  ...  S.M. de Tucumán  S.S. de Jujuy  \\\n",
+       "                          Posadas  ...  S.M. de Tucumán  S.S. de Jujuy   \n",
        "Distancias en kilómetros           ...                                   \n",
-       "Cdad. de Bs. As.            834.0  ...           1080.0         1334.0   \n",
+       "Cdad. de Bs. As.            834.0  ...           1080.0         1334.0  \\\n",
        "Córdoba                     919.0  ...            517.0          809.0   \n",
        "Corrientes                  291.0  ...            633.0          742.0   \n",
        "Formosa                     263.0  ...            703.0          750.0   \n",
@@ -763,9 +763,9 @@
        "Ushuaia                    3207.0  ...           3116.0         3408.0   \n",
        "Viedma                     1624.0  ...           1562.0         1855.0   \n",
        "\n",
-       "                           Salta  San Juan  San Luis  Santa Fe  Santa Rosa  \\\n",
+       "                           Salta  San Juan  San Luis  Santa Fe  Santa Rosa   \n",
        "Distancias en kilómetros                                                     \n",
-       "Cdad. de Bs. As.          1282.0    1005.0     749.0     393.0       579.0   \n",
+       "Cdad. de Bs. As.          1282.0    1005.0     749.0     393.0       579.0  \\\n",
        "Córdoba                    745.0     412.0     293.0     330.0       577.0   \n",
        "Corrientes                 719.0    1039.0     969.0     498.0      1136.0   \n",
        "Formosa                    741.0    1169.0    1117.0     654.0      1293.0   \n",
@@ -820,7 +820,7 @@
        "[24 rows x 24 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +861,7 @@
        "('Paraná', 19.0)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1120,7 @@
        "23               Ushuaia              Santa Fe          2641.0     9935.0"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1150,11 +1150,56 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[10], line 11\u001b[0m\n\u001b[0;32m      9\u001b[0m ciudad_i \u001b[39m=\u001b[39m ciudad_inicial\n\u001b[0;32m     10\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(\u001b[39m1\u001b[39m, cantidad_de_columnas):\n\u001b[1;32m---> 11\u001b[0m     ciudad_proxima, distancia \u001b[39m=\u001b[39m heuristica(ciudad_i, df_ciudades)\n\u001b[0;32m     12\u001b[0m     df_ciudades \u001b[39m=\u001b[39m df_ciudades\u001b[39m.\u001b[39mdrop(ciudad_i, axis\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m)\n\u001b[0;32m     13\u001b[0m     km_recorridos \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m distancia\n",
+      "Cell \u001b[1;32mIn[8], line 2\u001b[0m, in \u001b[0;36mheuristica\u001b[1;34m(ciudad, df)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mheuristica\u001b[39m(ciudad, df):\n\u001b[1;32m----> 2\u001b[0m     \u001b[39mif\u001b[39;00m ciudad \u001b[39min\u001b[39;49;00m df\u001b[39m.\u001b[39;49mindex:\n\u001b[0;32m      3\u001b[0m         \u001b[39m# Utiliza 'idxmin' para encontrar la ciudad con la menor distancia a 'ciudad1'\u001b[39;00m\n\u001b[0;32m      4\u001b[0m         ciudad_menor_distancia \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mloc[ciudad]\u001b[39m.\u001b[39midxmin()\n\u001b[0;32m      5\u001b[0m         distancia_minima \u001b[39m=\u001b[39m df\u001b[39m.\u001b[39mloc[ciudad, ciudad_menor_distancia]\n",
+      "File \u001b[1;32mc:\\Users\\barto\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:5143\u001b[0m, in \u001b[0;36mIndex.__contains__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   5108\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m__contains__\u001b[39m(\u001b[39mself\u001b[39m, key: Any) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mbool\u001b[39m:\n\u001b[0;32m   5109\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"\u001b[39;00m\n\u001b[0;32m   5110\u001b[0m \u001b[39m    Return a boolean indicating whether the provided key is in the index.\u001b[39;00m\n\u001b[0;32m   5111\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m   5141\u001b[0m \u001b[39m    False\u001b[39;00m\n\u001b[0;32m   5142\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m-> 5143\u001b[0m     \u001b[39mhash\u001b[39m(key)\n\u001b[0;32m   5144\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m   5145\u001b[0m         \u001b[39mreturn\u001b[39;00m key \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\n",
+      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "df_ciudades = df_base\n",
+    "cantidad_de_columnas = df_base.shape[1]\n",
+    "recorridos = []\n",
+    "lista_nombres = list(df_base.head(0))\n",
+    "for i in range(0, len(lista_nombres)):\n",
+    "    df_ciudades = df_base\n",
+    "    km_recorridos = 0       \n",
+    "    ciudad_inicial = lista_nombres[i]\n",
+    "    ciudad_i = ciudad_inicial\n",
+    "    for i in range(1, cantidad_de_columnas):\n",
+    "        ciudad_proxima, distancia = heuristica(ciudad_i, df_ciudades)\n",
+    "        df_ciudades = df_ciudades.drop(ciudad_i, axis=1)\n",
+    "        km_recorridos += distancia\n",
+    "        data = [ciudad_i, ciudad_proxima, distancia, km_recorridos]\n",
+    "        recorridos.append(data)\n",
+    "        ciudad_i = ciudad_proxima\n",
+    "\n",
+    "    km_recorridos += df_base[ciudad_i][ciudad_inicial]\n",
+    "    data = [ciudad_i, ciudad_inicial, df_base[ciudad_i][ciudad_inicial], km_recorridos]\n",
+    "    recorridos.append(data)\n",
+    "df_recorridos = pd.DataFrame(recorridos, columns=['Ciudad Inicial', 'Ciudad Final', 'Distancia (KM)', 'Total(KM)'])\n",
+    "df_recorridos"
+   ]
   }
  ],
  "metadata": {
@@ -1173,7 +1218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4,
   "vscode": {
