--- a/TP3/tp3-a.ipynb
+++ b/TP3/tp3-a.ipynb
@@ -9,14 +9,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# instalar Pillow (pip install Pillow)\n",
     "import math\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from PIL import Image, ImageDraw"
    ]
   },
   {
@@ -28,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +822,7 @@
        "[24 rows x 24 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -861,7 +863,7 @@
        "('Paraná', 19.0)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -884,12 +886,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### A"
+    "#### Dibujar mapa"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dibujar_linea(imagen, punto_inicio, punto_fin, color, grosor=1):\n",
+    "    draw = ImageDraw.Draw(imagen)\n",
+    "    draw.line([punto_inicio, punto_fin], fill=color, width=grosor)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Coordenadas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coordenadas = { \"Santa Fe\": (186,168), \"Paraná\": (214,181), \"Córdoba\": (146,185), \"San Luis\": (113,210), \"Mendoza\": (74,201), \"San Juan\": (77,178), \"La Rioja\": (102,145), \"S.F.d.V.d. Catamarca\": (115,122), \"Sgo. Del Estero\": (140,113), \"S.M. de Tucumán\": (124,99), \"Salta\": (122,61), \"S.S. de Jujuy\": (124,52),\"Resistencia\": (217,102), \"Corrientes\": (225,107), \"Formosa\": (234,85), \"Posadas\": (269,110), \"Cdad. de Bs. As.\": (229,238), \"La Plata\": (218,226), \"Santa Rosa\": (139,264), \"Neuquén\": (86,303), \"Viedma\": (158,334), \"Rawson\": (129,374), \"Río Gallegos\": (91,519), \"Ushuaia\": (108,568) }"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Main"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1120,12 +1163,13 @@
        "23               Ushuaia              Santa Fe          2641.0     9935.0"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "imagen = Image.open(\"mapa.png\")\n",
     "df_ciudades = df_base\n",
     "km_recorridos = 0\n",
     "ciudad_inicial = \"Santa Fe\"\n",
@@ -1139,22 +1183,36 @@
     "    km_recorridos += distancia\n",
     "    data = [ciudad_i, ciudad_proxima, distancia, km_recorridos]\n",
     "    recorridos.append(data)\n",
+    "    dibujar_linea(imagen, coordenadas[ciudad_i], coordenadas[ciudad_proxima], color=\"red\", grosor=1)\n",
     "    ciudad_i = ciudad_proxima\n",
+    "    \n",
     "\n",
     "km_recorridos += df_base[ciudad_i][ciudad_inicial]\n",
     "data = [ciudad_i, ciudad_inicial,df_base[ciudad_i][ciudad_inicial], km_recorridos]\n",
     "recorridos.append(data)\n",
+    "dibujar_linea(imagen, coordenadas[ciudad_i], coordenadas[ciudad_inicial], color=\"red\", grosor=1)\n",
     "\n",
     "df_recorridos = pd.DataFrame(recorridos, columns=['Ciudad Inicial', 'Ciudad Final', 'Distancia (KM)', 'Total(KM)'])\n",
+    "imagen.save(\"imagen_con_lineas.png\")\n",
     "df_recorridos\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Coordenadas"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Mostrar la imagen\n",
+    "imagen.show()"
+   ]
   }
  ],
  "metadata": {
