--- a/TP3/tp3-a.ipynb
+++ b/TP3/tp3-a.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -684,9 +684,9 @@
        "</div>"
       ],
       "text/plain": [
-       "                          Cdad. de Bs. As.  Córdoba  Corrientes  Formosa  \\\n",
+       "                          Cdad. de Bs. As.  Córdoba  Corrientes  Formosa   \n",
        "Distancias en kilómetros                                                   \n",
-       "Cdad. de Bs. As.                       NaN    646.0       792.0    933.0   \n",
+       "Cdad. de Bs. As.                       NaN    646.0       792.0    933.0  \\\n",
        "Córdoba                              646.0      NaN       677.0    824.0   \n",
        "Corrientes                           792.0    677.0         NaN    157.0   \n",
        "Formosa                              933.0    824.0       157.0      NaN   \n",
@@ -711,9 +711,9 @@
        "Ushuaia                             2373.0   2618.0      3131.0   3284.0   \n",
        "Viedma                               799.0   1047.0      1527.0   1681.0   \n",
        "\n",
-       "                          La Plata  La Rioja  Mendoza  Neuquén  Paraná  \\\n",
+       "                          La Plata  La Rioja  Mendoza  Neuquén  Paraná   \n",
        "Distancias en kilómetros                                                 \n",
-       "Cdad. de Bs. As.              53.0     986.0    985.0    989.0   375.0   \n",
+       "Cdad. de Bs. As.              53.0     986.0    985.0    989.0   375.0  \\\n",
        "Córdoba                      698.0     340.0    466.0    907.0   348.0   \n",
        "Corrientes                   830.0     814.0   1131.0   1534.0   500.0   \n",
        "Formosa                      968.0     927.0   1269.0   1690.0   656.0   \n",
@@ -738,9 +738,9 @@
        "Ushuaia                     2350.0    2821.0   2435.0   1762.0  2635.0   \n",
        "Viedma                       789.0    1311.0   1019.0    479.0  1030.0   \n",
        "\n",
-       "                          Posadas  ...  S.M. de Tucumán  S.S. de Jujuy  \\\n",
+       "                          Posadas  ...  S.M. de Tucumán  S.S. de Jujuy   \n",
        "Distancias en kilómetros           ...                                   \n",
-       "Cdad. de Bs. As.            834.0  ...           1080.0         1334.0   \n",
+       "Cdad. de Bs. As.            834.0  ...           1080.0         1334.0  \\\n",
        "Córdoba                     919.0  ...            517.0          809.0   \n",
        "Corrientes                  291.0  ...            633.0          742.0   \n",
        "Formosa                     263.0  ...            703.0          750.0   \n",
@@ -765,9 +765,9 @@
        "Ushuaia                    3207.0  ...           3116.0         3408.0   \n",
        "Viedma                     1624.0  ...           1562.0         1855.0   \n",
        "\n",
-       "                           Salta  San Juan  San Luis  Santa Fe  Santa Rosa  \\\n",
+       "                           Salta  San Juan  San Luis  Santa Fe  Santa Rosa   \n",
        "Distancias en kilómetros                                                     \n",
-       "Cdad. de Bs. As.          1282.0    1005.0     749.0     393.0       579.0   \n",
+       "Cdad. de Bs. As.          1282.0    1005.0     749.0     393.0       579.0  \\\n",
        "Córdoba                    745.0     412.0     293.0     330.0       577.0   \n",
        "Corrientes                 719.0    1039.0     969.0     498.0      1136.0   \n",
        "Formosa                    741.0    1169.0    1117.0     654.0      1293.0   \n",
@@ -822,7 +822,7 @@
        "[24 rows x 24 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +863,7 @@
        "('Paraná', 19.0)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -932,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1163,7 +1163,7 @@
        "23               Ushuaia              Santa Fe          2641.0     9935.0"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1206,12 +1206,283 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Mostrar la imagen\n",
-    "imagen.show()"
+    "# imagen.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Ciudad Inicial</th>\n",
+       "      <th>Ciudad Final</th>\n",
+       "      <th>Distancia (KM)</th>\n",
+       "      <th>Total(KM)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Neuquén</td>\n",
+       "      <td>Santa Rosa</td>\n",
+       "      <td>422.0</td>\n",
+       "      <td>422.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Santa Rosa</td>\n",
+       "      <td>San Luis</td>\n",
+       "      <td>412.0</td>\n",
+       "      <td>834.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>San Luis</td>\n",
+       "      <td>Mendoza</td>\n",
+       "      <td>235.0</td>\n",
+       "      <td>1069.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Mendoza</td>\n",
+       "      <td>San Juan</td>\n",
+       "      <td>152.0</td>\n",
+       "      <td>1221.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>San Juan</td>\n",
+       "      <td>La Rioja</td>\n",
+       "      <td>283.0</td>\n",
+       "      <td>1504.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>La Rioja</td>\n",
+       "      <td>S.F.d.V.d. Catamarca</td>\n",
+       "      <td>149.0</td>\n",
+       "      <td>1653.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>S.F.d.V.d. Catamarca</td>\n",
+       "      <td>Sgo. Del Estero</td>\n",
+       "      <td>166.0</td>\n",
+       "      <td>1819.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Sgo. Del Estero</td>\n",
+       "      <td>S.M. de Tucumán</td>\n",
+       "      <td>141.0</td>\n",
+       "      <td>1960.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>S.M. de Tucumán</td>\n",
+       "      <td>Salta</td>\n",
+       "      <td>228.0</td>\n",
+       "      <td>2188.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Salta</td>\n",
+       "      <td>S.S. de Jujuy</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>2255.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>S.S. de Jujuy</td>\n",
+       "      <td>Resistencia</td>\n",
+       "      <td>729.0</td>\n",
+       "      <td>2984.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Resistencia</td>\n",
+       "      <td>Corrientes</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>2997.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Corrientes</td>\n",
+       "      <td>Formosa</td>\n",
+       "      <td>157.0</td>\n",
+       "      <td>3154.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Formosa</td>\n",
+       "      <td>Posadas</td>\n",
+       "      <td>263.0</td>\n",
+       "      <td>3417.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Posadas</td>\n",
+       "      <td>Paraná</td>\n",
+       "      <td>658.0</td>\n",
+       "      <td>4075.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Paraná</td>\n",
+       "      <td>Santa Fe</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>4094.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Santa Fe</td>\n",
+       "      <td>Córdoba</td>\n",
+       "      <td>330.0</td>\n",
+       "      <td>4424.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Córdoba</td>\n",
+       "      <td>Cdad. de Bs. As.</td>\n",
+       "      <td>646.0</td>\n",
+       "      <td>5070.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Cdad. de Bs. As.</td>\n",
+       "      <td>La Plata</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>5123.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>La Plata</td>\n",
+       "      <td>Viedma</td>\n",
+       "      <td>789.0</td>\n",
+       "      <td>5912.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Viedma</td>\n",
+       "      <td>Rawson</td>\n",
+       "      <td>327.0</td>\n",
+       "      <td>6239.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Rawson</td>\n",
+       "      <td>Río Gallegos</td>\n",
+       "      <td>975.0</td>\n",
+       "      <td>7214.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Río Gallegos</td>\n",
+       "      <td>Ushuaia</td>\n",
+       "      <td>359.0</td>\n",
+       "      <td>7573.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Ushuaia</td>\n",
+       "      <td>Neuquén</td>\n",
+       "      <td>1762.0</td>\n",
+       "      <td>9335.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Ciudad Inicial          Ciudad Final  Distancia (KM)  Total(KM)\n",
+       "0                Neuquén            Santa Rosa           422.0      422.0\n",
+       "1             Santa Rosa              San Luis           412.0      834.0\n",
+       "2               San Luis               Mendoza           235.0     1069.0\n",
+       "3                Mendoza              San Juan           152.0     1221.0\n",
+       "4               San Juan              La Rioja           283.0     1504.0\n",
+       "5               La Rioja  S.F.d.V.d. Catamarca           149.0     1653.0\n",
+       "6   S.F.d.V.d. Catamarca       Sgo. Del Estero           166.0     1819.0\n",
+       "7        Sgo. Del Estero       S.M. de Tucumán           141.0     1960.0\n",
+       "8        S.M. de Tucumán                 Salta           228.0     2188.0\n",
+       "9                  Salta         S.S. de Jujuy            67.0     2255.0\n",
+       "10         S.S. de Jujuy           Resistencia           729.0     2984.0\n",
+       "11           Resistencia            Corrientes            13.0     2997.0\n",
+       "12            Corrientes               Formosa           157.0     3154.0\n",
+       "13               Formosa               Posadas           263.0     3417.0\n",
+       "14               Posadas                Paraná           658.0     4075.0\n",
+       "15                Paraná              Santa Fe            19.0     4094.0\n",
+       "16              Santa Fe               Córdoba           330.0     4424.0\n",
+       "17               Córdoba      Cdad. de Bs. As.           646.0     5070.0\n",
+       "18      Cdad. de Bs. As.              La Plata            53.0     5123.0\n",
+       "19              La Plata                Viedma           789.0     5912.0\n",
+       "20                Viedma                Rawson           327.0     6239.0\n",
+       "21                Rawson          Río Gallegos           975.0     7214.0\n",
+       "22          Río Gallegos               Ushuaia           359.0     7573.0\n",
+       "23               Ushuaia               Neuquén          1762.0     9335.0"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ciudades = df_base.copy()\n",
+    "cantidad_de_columnas = df_base.shape[1]\n",
+    "recorridos = []\n",
+    "lista_nombres = list(df_base.head(0))\n",
+    "ciudades_recorridos = []\t\n",
+    "for i in range(0, len(lista_nombres)):\n",
+    "    df_ciudades = df_base.copy()\n",
+    "    km_recorridos = 0\n",
+    "    ciudad_inicial = lista_nombres[i]\n",
+    "    ciudad_i = ciudad_inicial\n",
+    "    for j in range(1, cantidad_de_columnas):\n",
+    "        ciudad_proxima, distancia = heuristica(ciudad_i, df_ciudades)\n",
+    "        df_ciudades = df_ciudades.drop(ciudad_i, axis=1)\n",
+    "        km_recorridos += distancia\n",
+    "        data = [ciudad_i, ciudad_proxima, distancia, km_recorridos]\n",
+    "        recorridos.append(data)\n",
+    "        ciudad_i = ciudad_proxima\n",
+    "\n",
+    "    km_recorridos += df_base[ciudad_i][ciudad_inicial] \n",
+    "    data = [ciudad_i, ciudad_inicial, df_base[ciudad_i][ciudad_inicial], km_recorridos]\n",
+    "    recorridos.append(data)\n",
+    "    ciudadInicial_kilometros = [lista_nombres[i], km_recorridos, recorridos]\n",
+    "    ciudades_recorridos.append(ciudadInicial_kilometros)\n",
+    "    recorridos = []\n",
+    "#ciudades_recorridos\n",
+    "lista_ordenada = sorted(ciudades_recorridos, key=lambda x: x[1])\n",
+    "#lista_ordenada[0]\n",
+    "df_recorridos = pd.DataFrame(lista_ordenada[0][2], columns=[\n",
+    "                             'Ciudad Inicial', 'Ciudad Final', 'Distancia (KM)', 'Total(KM)'])\n",
+    "df_recorridos"
    ]
   }
  ],
