Updated execution counts and modified fitness function

--- a/TP3/AlgoritmoGenetico/Main_TP3.ipynb
+++ b/TP3/AlgoritmoGenetico/Main_TP3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -188,8 +188,8 @@
    "source": [
     "ciclos = 200\n",
     "cantidad_cromosomas = 50\n",
-    "funcion_objetivo = lambda x: 200 #          esto tiene que devolver la distancia, no?\n",
-    "fitness = lambda obj,sum_obj: obj/sum_obj   # distancia total\n",
+    "funcion_objetivo = lambda x,y: get_distance(x,y)      #  esto tiene que devolver la distancia, no?\n",
+    "fitness = lambda obj,sum_obj: obj/sum_obj   # distancia total?\n",
     "Cromosoma.setProbMutacion(0.05)\n",
     "Cromosoma.setProbCrossover(0.75)\n",
     "poblacion = DNA.generar_poblacion_numeros(cantidad_cromosomas)\n",
